Fix bug in shrinking title div on safari

--- a/src/less/main.less
+++ b/src/less/main.less
@@ -102,7 +102,6 @@ html, body {
 
 .tall-container-shrink {
   flex-grow: 0;
-  flex-shrink: 1;
   flex-basis: auto;
 }
 
